# ground_effect

./: CMakeLists.txt  README.md  manifest.xml  notes.txt  package.xml  traj.csv  traj_along_ground.m
config/: .gitignore  controllers.yaml  hummingbird_gains.yaml  mav_manager_params.yaml
include/: nano_kontrol2.h  trajectory.h
include/trajectory/: trajectory.h
launch/: base.launch  base_odroid.launch  quad.launch  quad_odroid.launch  quad_odroid_record.launch
scripts/: record.sh
src/: state_control.cpp  trajectory.cpp
